# Atividades

./: .gitignore
Exercício 1/: imc.py  imc_teste.py
Exercício 2/: main.py  requirements.txt
Exercício 2/artifacts/: ascii.txt
Exercício 2/projects/: random_password_gen.py  reduce_image_size.py
Exercício 2/testes_4/: make_art.py  qr_code_generator.py  random_password_gen.py  unique_words_in_file.py
Exercício 2/tests/: random_password_gen_test.py
Exercício 3/: pyproject.toml
Exercício 3/artifacts/: unique_words_file.txt
Exercício 3/projects/: qr_code_generator.py  unique_words_in_file.py
Exercício 3/tests/: make_art_test.py  qr_code_generator_test.py  random_password_gen_test.py  reduce_image_size_test.py  unique_words_in_file_test.py
Testes 4/: pyproject.toml
Testes 4/tests/: make_art_test.py
